# rapidyenc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build_rapidyenc_linux-amd64.sh  build_rapidyenc_linux-arm64.sh  cgo.go  crossbuild_rapidyenc_darwin-amd64.sh  crossbuild_rapidyenc_windows-amd64.sh  decoder.go  decoder_test.go  encoder.go  encoder_test.go  go.mod  go.sum  main.go  meta.go  meta_test.go  platform.go  platform_test.go  rapidyenc_darwin_arm64.go  required.deb-packages.txt  toolchain-darwin-amd64.cmake  toolchain-darwin-arm64.cmake  toolchain-darwin.cmake  toolchain-linux-amd64.cmake  toolchain-linux-arm64.cmake  toolchain-mingw64.cmake  toolchain-windows-amd64.cmake  untested_crossbuild_rapidyenc_linux-386.sh  update_rapidyenc.sh  windows.bat  yencode_wrapper.c  yencode_wrapper.h
.github/workflows/: build.yml  ci.yml
crc32/: crc32.go
decoder/: decoder.go  decoder_test.go  decorder.go
encoder/: encoder.go
rapidyenc/: rapidyenc.c  rapidyenc.h
rapidyenc/src/: crc.cc  crc.h
uuencode/: test1.uue  test2.uue
yenc/: multipart_test_badcrc.yenc  singlepart_test_badcrc.yenc
yencode/: Makefile
